fixed the first div's background not fully covering the entire page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,7 +86,7 @@ footer a {
   flex-flow: column;
   justify-content: space-between;
   justify-content: center;
-  height: calc(100vh - 56px);
+  height: calc(100vh - 50px);
   background-image: url(../img/theming/bj.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
